fixed footer getting squished on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,8 @@ main {
   margin: 0 auto;
   gap: 30px;
   flex-grow: 1;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   /* background-color: red; */
 }
 
@@ -244,14 +246,13 @@ input[type="password"].errorBorder {
   body {
     background-image: url("./images/bg-intro-desktop.png");
   }
-  footer {
-    position: absolute;
-  }
+  
 }
 
 @media screen and (max-width: 1400px) {
   main {
     max-width: 90%;
+    
   }
 }
 
@@ -338,4 +339,5 @@ h1 {
 .formContainer {
   margin-bottom: 6rem;
 }
+
 }
